# webcam_face_detector

./: CMakeLists.txt  README.md  package.xml
include/webcam_face_detector/: detection_utils.hpp  webcam_face_detector.hpp
src/: detection_utils.cpp  webcam_face_detector.cpp
